[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/headers/header.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/clickables/keyboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/modes/zen_mode.gd" type="Script" id=3]

[node name="zen_mode" type="Node2D"]
script = ExtResource( 3 )

[node name="keyboard" parent="." instance=ExtResource( 2 )]

[node name="zen_mode_header" parent="." instance=ExtResource( 1 )]

[connection signal="reskin" from="keyboard" to="." method="_on_reskin"]
